# smontanaro-net

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  crawler-block.txt  filter.awk  gcfg.py  hello.py  localhost.exp  localhost.urls  pyproject.toml  pytest.ini  readme-terrafirma.txt  requirements.txt  run.sh  smontanaro.net  smontanaro.net.in  test.sh  train.csv  urlmap.csv  util.py  wsgi.py
python/: index.html
python/spam7/: optimizer.html  peephole01.html  peephole02.html  peephole05.html  peephole06.html  peephole09.html  peephole10.html  peephole11.html  peephole13.html  peephole14.html  peephole15.html
scripts/: abs2rel.py  aftertitle.sh  buildindex.exc  buildindex.py  check-site.sh  common-words.txt  crcachectl.py  csv2topic.py  cull-dups.py  extracttbfromsyslog.py  filter.awk  findlinks.py  gcfg.py  gen-bodies.sh  gen-dates.sh  generate_date_index.py  generate_thread_index.py  genindexbody.sh  getua.py  idwj.py  listbydate.py  makerefsdb.py  makesitemap.py  printindex.py  reorganizeemails.py  rewritemsgrefs.py  run.sh  test.sh  training.py
smontanaro/: setup.cfg  setup.py
smontanaro/smontanaro/: __init__.py  dates.py  db.py  exc.py  forms.py  hello.py  log.py  msg_threads.py  query.py  query_parser.py  refdb.py  simple.py  srchdb.py  strip.py  util.py  views.py
smontanaro/tests/: _test_helper.py  conftest.py  test_api_help.py  test_app.py  test_calendar.py  test_photolink.py  test_query.py  test_search.py  test_static.py  test_strip.py
static/css/: default.css  floating.css
templates/: cr.html  home.html  main.html  search.html
(+746 files in other folders)
